# easy-backtest

./: helpers  londonKZ_stats.py  low_of_day_londonKZ.py  main.py  playground.py  pyproject.toml  requirements.txt
data/: CME_MINI_NQ1!, 60.csv  EURUSD_M15-10000.csv  NASDAQ-1H-10000.csv  NASDAQ_H1.csv
