[project]
name = "easy-backtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "python-pptx>=1.0.2",
    "python-telegram-bot>=22.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]
